<resources>
	<string name="app_name">PeerTube</string>

	<string name="dot_separator" translatable="false">•</string>

	<string name="action_settings">Settings</string>
	<string name="title_overview">Overview</string>
	<string name="title_trending">Trending</string>
	<string name="title_recently_added">Recently added</string>
	<string name="title_local">Local</string>
	<string name="title_about">About</string>
	<string name="instance">Instance</string>
	<string name="instances">Instances</string>
	<string name="videos">Videos</string>
	<string name="video">Video</string>
	<string name="views">views</string>
	<string name="about_instance">About %1$s instance</string>
	<string name="terms">Terms</string>
	<string name="description">Description</string>
	<string name="track_selection_title">Select tracks</string>
	<string name="error">Error</string>
	<string name="share">Share</string>
	<string name="download">Download</string>
	<string name="account">Account</string>
	<string name="login">Login</string>
	<string name="not_logged">Not logged</string>
	<string name="read_more">Read more</string>
	<string name="users">Users</string>
	<string name="stats">Stats</string>
	<string name="video_views">Video views</string>
	<string name="video_comments">Video comments</string>
	<string name="hosted_videos">Hosted videos</string>
	<string name="retry">Retry</string>
	<string name="no_result_found">No result found</string>
	<string name="no_result_found_description">Try with another keyword</string>
	<plurals name="view_replies">
		<item quantity="other">No reply</item>
		<item quantity="one">View reply</item>
		<item quantity="many">View %1$d replies</item>
	</plurals>
</resources>
