<?xml version="1.0" encoding="utf-8"?>
<navigation
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/instance_nav_graph"
		app:startDestination="@id/navigation_overview"
		>

	<action
			android:id="@+id/action_global_navigation_video"
			app:destination="@id/navigation_video"
			>

		<argument android:name="host" app:argType="string" />
		<argument android:name="video_id" app:argType="string" />
	</action>

	<action
			android:id="@+id/action_global_navigation_account"
			app:destination="@+id/navigation_account"
			>

		<argument android:name="host" app:argType="string" />
	</action>

	<action
			android:id="@+id/action_global_navigation_login"
			app:destination="@+id/navigation_login"
			>

		<argument android:name="host" app:argType="string" />
	</action>

	<fragment
			android:id="@+id/navigation_overview"
			android:name="co.revely.peertube.ui.videos.overview.OverviewFragment"
			android:label="@string/title_overview"
			tools:layout="@layout/fragment_overview"
			>

		<argument android:name="host" app:argType="string" />
	</fragment>

	<fragment
			android:id="@+id/navigation_trending"
			android:name="co.revely.peertube.ui.videos.trending.TrendingFragment"
			android:label="@string/title_trending"
			tools:layout="@layout/fragment_trending"
			>

		<argument android:name="host" app:argType="string" />
	</fragment>

	<fragment
			android:id="@+id/navigation_recent"
			android:name="co.revely.peertube.ui.videos.recent.RecentFragment"
			android:label="@string/title_recently_added"
			tools:layout="@layout/fragment_recent"
			>

		<argument android:name="host" app:argType="string" />
	</fragment>

	<fragment
			android:id="@+id/navigation_local"
			android:name="co.revely.peertube.ui.videos.local.LocalFragment"
			android:label="@string/title_local"
			tools:layout="@layout/fragment_local"
			>

		<argument android:name="host" app:argType="string" />
	</fragment>

	<fragment
			android:id="@+id/navigation_about"
			android:name="co.revely.peertube.ui.about.AboutFragment"
			android:label="@string/title_about"
			tools:layout="@layout/fragment_about"
			>

		<argument android:name="host" app:argType="string" />
	</fragment>

	<fragment
			android:id="@+id/navigation_video"
			android:name="co.revely.peertube.ui.video.VideoFragment"
			android:label="@string/video"
			tools:layout="@layout/fragment_video"
			>

		<argument android:name="host" app:argType="string" />
		<argument android:name="video_id" app:argType="string" />
	</fragment>

	<fragment
			android:id="@+id/navigation_account"
			android:name="co.revely.peertube.ui.account.AccountFragment"
			android:label="@string/account"
			tools:layout="@layout/fragment_account"
			>

		<argument android:name="host" app:argType="string" />

		<action
				android:id="@+id/action_account_to_login"
				app:destination="@id/navigation_login"
				>

			<argument android:name="host" app:argType="string" />
		</action>
	</fragment>

	<fragment
			android:id="@+id/navigation_login"
			android:name="co.revely.peertube.ui.account.login.LoginFragment"
			android:label="@string/login"
			tools:layout="@layout/fragment_login"
			>

		<argument android:name="host" app:argType="string" />
	</fragment>
</navigation>
